Add tast to create custom runtime image using jlink